# p2v2_requetez_service_ia

./: README.md  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb  pyproject-checkpoint.toml
presentation/: Support_de_présentation_ModeTrends.pptx
