[project]
name = "p2-requetez-services-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "jodygonzales.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "jupyterlab (>=4.4.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
